landing page work
created landing page, added responsive nav, added icons for socials on the bottom, added image icons

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,110 +1,92 @@
-.header {
-  display: flex;
-  align-items: center;
-  max-height: 80px;
-  margin-top: 20px;
-  justify-content: space-between;
-  margin-right: 2vw;
-  margin-bottom: 10px;
-}
-
 .boundingcontainer {
   overflow-x: hidden;
   position: relative;
-  height: 100vh;
   margin: 0px;
 }
 
-.homeSection {
+.homeContainer {
+  height: 100vh;
+  display: flex;
+  background-color: black;
+  justify-content: center;
+}
+
+.homeContainer .lamp{
+  height: 40vmin;
+  margin-left: 2.5vmin;
+}
+
+.homeContainer .initials{
+  height: 70vmin;
+}
+
+.logo{
+  height:77.5vh;
+  display:flex;
+  align-items: center;
+}
+
+.nav {
   display: flex;
   align-items: center;
-  color: #CF2127;
-  font-size: 30px;
-  margin-left: 30px;
-  margin-top: 20px;
-  position: relative;
-  z-index: 3;
-}
-
-/* Makes just the home page home section default to white */
-#home .homeSection {
-  display: flex;
-  align-items: center;
-  color: white;
-  font-size: 30px;
-  margin-left: 30px;
-  margin-top: 20px;
-  position: relative;
-  z-index: 3;
-}
-
-.homeSection img{
-  padding-left: 12px;
-  max-height: 36px;
-}
-
-.homeSection:hover {
-  color: #FFE12B;
-  cursor: pointer;
-}
-
-.welcomeStatement {
-  display: block;
-  padding: 0% 10% 3% 10%;
-  background-color: white;
-}
-
-.welcomeStatement p {
-  font-size: 1.7rem
-}
-
-/* burger toggles between dropdownContainer and dropdownContainer-active */
-.dropdownContainer {
-  position: absolute;
-  width: 100%;
-  height: 93vh;
-  top: 0;
-  background-color: white;
-  z-index: 1;
-  transform: translateX(100%);
-  transition: transform 0.6s ease-in;
-}
-
-.dropdownContainer-active {
-  transform: translateX(0%);
+  justify-content: flex-end;
+  max-height: 7.5vh;
+  margin-top: 10px;
+  margin-right: 1vw;
+  margin-bottom: 10px;
 }
 
 /* Removed white bg color here and moved it to the overall container. Don't need funky 43.5vh margin anymore */
 .nav-links{
-  position: absolute;
   display: flex;
-  justify-content: space-around;
-  width: 100%;
-  height: 100%;
-  right: 0px;
-  flex-direction: column;
-  align-items: flex-end;
-  transform: translateX(100%);
-  transition: transform 0.6s ease-in;
-  font-size: 6vmin;
+  font-size: 3vmin;
   z-index: 1;
   margin-top: 70px;
 }
 
 .nav-links a {
   text-decoration: none;
-  color: #CF2127;
-  margin-right: 100px;
-  margin-bottom: 15%;
+  color: #FFE41D;
 }
 
 .nav-links li {
   list-style: none;
+  color: #FFE41D;
+  display: table-cell;
+  position: relative;
 }
 
 .nav-links a:hover {
-  transform: translateX(-4vmin);
-  transition: transform 0.25 ease;
+  color: white;
+  transition: 0.1s ease-in;
+}
+
+.nav-links a::after{
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #FFE41D;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.nav-links a:hover::after{
+  width: 100%;
+  left: 0;
+}
+
+.icons{
+  position: relative;
+  /* height: 80%; */
+  margin-top: 5vh;
+  bottom: 0px;
+  margin-left: 45vw;
+  display:flex;
+  justify-content: space-around;
+  align-items: baseline;
 }
 
 /* makes nav menu visible */
@@ -144,25 +126,6 @@
   position: inherit;
   z-index: 2;
 }
-
-/* Makes just the home page burger default to be white */
-#home .burger div{
-  width: 40px;
-  height: 5px;
-  margin-right: 0px;
-  background-color: white;
-  margin: 5px;
-  display: flex;
-  align-items: flex-end;
-  transition: all 0.25s ease;
-}
-
-#home .burger:hover div{
-  cursor: pointer;
-  /* Adding important here actually fixes the hover bug! */
-  background-color: #FFE12B!important;
-}
-
 .burger:hover div{
   cursor: pointer;
   background-color: #FFE12B!important;
@@ -196,87 +159,3 @@
   opacity: 0;
 }
 
-.homePageContainer {
-  height: 95vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.slideshow-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-  filter: brightness(60%);
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
-}
-
-.homePageText h1 {
-  color: white;
-  font-size: 7rem;
-  margin-bottom: 110px;
-}
-
-.homePageText img {
-  height: 250px;
-}
-
-/* Decreases home page logo and text for mobile screens */
-@media (max-width: 400px) {
-  .homePageText h1 {font-size: 5.5rem;}
-  .homePageText img {height: 200px;}
-}
-
-/* Expands home page logo and text for very large screens*/
-@media (min-width: 2000px) {
-  .homePageText h1 {font-size: 9rem;}
-  .homePageText img {height: 300px;}
-}
-
-.thankYouContainer {
-  display: flex;
-  position: absolute;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 87.5vh;
-}
-
-.prompt{
-  text-align: center;
-  color: #CF2127;
-  padding: 0 10px;
-}
-
-.logo #photo{
-  position: relative;
-  width: 50vmin;
-  height: auto;
-}
-
-.bottomDecals {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 100;
-  margin-bottom: 1vh;
-}
-
-.frameDeco {
-  position: relative;
-  width: 40vh;
-  display: block;
-  overflow: hidden;
-}
-
-.container {
-  display: block;
-}
