--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -159,9 +159,12 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  /* color: #1EAEDB;  */
+  color: black;}
 a:hover {
-  color: #0FA0CE; }
+  color: black;
+  /* color: #0FA0CE;  */
+}
 
 
 /* Buttons
