--- a/css/index.css
+++ b/css/index.css
@@ -8,12 +8,13 @@
   height: 100vh;
   display: flex;
   background-color: black;
-  justify-content: center;
+  flex-direction: column;
 }
 
-.homeContainer .lamp{
-  width: 22.5vmin;
-  margin-left: 2.5vmin;
+.mainContent{
+  display:flex;
+  flex-direction: column;
+  align-items: space-around;
 }
 
 .homeContainer .initials{
@@ -24,56 +25,8 @@
   height:77.5vh;
   display:flex;
   align-items: center;
-}
-
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  height: 7.5vh;
-  margin-top: 10px;
-  margin-right: 1vw;
-  margin-bottom: 10px;
-}
-
-.nav-links{
-  font-size: 3vmin;
-  z-index: 1;
-  margin-top: 70px;
-}
-
-.nav-links a {
-  text-decoration: none;
-  color: #FFE41D;
-}
-
-.nav-links li {
-  list-style: none;
-  color: #FFE41D;
-  display: table-cell;
-  position: relative;
-}
-
-.nav-links a:hover {
-  color: white;
-  transition: 0.1s ease-in;
-}
-
-.nav-links a::after{
-  background: none repeat scroll 0 0 transparent;
-  bottom: 0;
-  content: "";
-  height: 2px;
-  left: 50%;
-  position: absolute;
-  background: #FFE41D;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
-  width: 0;
-}
-
-.nav-links a:hover::after{
-  width: 100%;
-  left: 0;
+  justify-content: center;
+  margin-left: 5vw;
 }
 
 .icons{
@@ -81,7 +34,7 @@
   /* height: 80%; */
   margin-top: 5vh;
   bottom: 0px;
-  margin-left: 45vw;
+  margin-left: 65vw;
   display:flex;
   justify-content: space-around;
   align-items: baseline;
@@ -89,11 +42,6 @@
 
 .icons i{
   display:none;
-}
-
-/* makes nav menu visible */
-.nav-active {
-  color: #FFE41D;
 }
 
 /* animation of the links in the drop down menu */
