--- a/css/about.css
+++ b/css/about.css
@@ -3,7 +3,8 @@
     position: relative;
     margin: 0px;
     height: 100vh;
-    background-color: #1c2e4a;
+    /* background-color: #1c2e4a; */
+    background-color: #4e5969;
 }
 
 .title h2{
@@ -18,22 +19,23 @@
 }
 
 .aboutBanner {
-  display: flex;
+  display: block;
   flex-direction: column;
   background-color: black;
   height:45vh;
   }
 
-.aboutContent p {
-  font-size: 1.5em;
+.title h1{
+  z-index:1;
 }
-
 .bannerTitle{
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: 37.5vh;
   justify-content: center;
+  -webkit-text-stroke-width: 0.1vmin;
+  -webkit-text-stroke-color: black;
 }
 .subtitle{
   justify-content: start;
@@ -130,11 +132,18 @@
     animation-timing-function: steps(1, end);
   }
 
-.aboutContent{
+#aboutContent{
   margin: 15px 15px 15px 20px;
+}
+
+#aboutContent p{
+  color: white;
+  font-size: 1.5em;
   width: 75%;
 }
 
-.aboutContent p{
-  color: white;
+@media (max-width: 810px) and (min-width: 475px){
+  .lamp {
+    opacity: 65%;
+  }
 }
