--- a/css/exp.css
+++ b/css/exp.css
@@ -3,7 +3,7 @@
     position: relative;
     margin: 0px;
     height: 100vh;
-    background-color: #1c2e4a;
+    background-color: white;
 }
 
 
@@ -25,12 +25,27 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    z-index:1;
+    -webkit-text-stroke-width: 0.1vmin;
+    -webkit-text-stroke-color: black;
 }
 
+.expContent{
+    margin-top: 1.35vh;
+    padding: 0 2vw;
+    width:100%;
+}
 
-.expontent p {
+.expContent p {
   font-size: 1.5em;
+  color: white;
+  justify-content: center;
 }
+
+.img:hover{
+    opacity:55%;
+}
+
 
 /* @font-face{
     font-family: "gt-america";
@@ -41,3 +56,70 @@
     font-family: 'gt-america';
     color: white;
 } */
+
+.img{
+    max-height:25vh;
+    max-width:25vh;
+}
+
+.slideContainer {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    background-color: white;
+    z-index: 1;
+    transform: translateX(100%);
+    transition: transform 0.6s ease-in;
+    margin-top: 45vh;
+    height:55vh;
+}
+
+.slideContainer-active {
+    transform: translateX(0%);
+}
+
+#arrow {
+    margin-left: 1.5vw;
+    font-size: 2em;
+    color:#ffb020;
+    margin-bottom: 0;
+}
+
+#arrow:hover{
+    color:#4e5969;
+}
+
+.exp-description h6 {
+    margin-left: 1.5vw;
+    color: black;
+    font-size: 1.25em;;
+    margin-bottom: 0;
+}
+
+.exp-description p {
+    margin-bottom: 0;
+    font-size: 0.85em;
+}
+
+.exp-description li{
+    list-style: none;
+    display:flex;
+    position:relative;
+}
+/* 
+#descr::after, #num::after, #skills::after{
+    content: attr(content);
+    position:absolute;
+    font-size: 0.85em;
+    width: calc(66.6666666664% - 1em);
+} */
+
+#refImg{
+    max-height: 55vh;
+}
+
+@media (max-width: 1200px) and (min-width: 400px){
+    .lamp {
+      opacity: 65%;
+    }
+  }
