--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@
     margin-left: 3vmin;
     position:absolute;
     display:flex;
+    z-index: 0;
 }
 
 .nav {
@@ -11,9 +12,7 @@
     align-items: center;
     justify-content: flex-end;
     height: 7.5vh;
-    margin-top: 10px;
-    margin-right: 1vw;
-    margin-bottom: 10px;
+    margin-right: 2vw;
   }
   
   .nav-links{
