--- a/css/about.css
+++ b/css/about.css
@@ -4,13 +4,16 @@
     margin: 0px;
     height: 100vh;
     /* background-color: #1c2e4a; */
-    background-color: #4e5969;
+    /* background-color: #4e5969; */
+    background-color: white;
 }
 
 .title h2{
   text-decoration: underline;
   text-decoration-color: #ffb020;
-  color: white;
+  /* color: white; */
+  color: black;
+  font-size: 3em;
 
 }
 
@@ -137,7 +140,7 @@
 }
 
 #aboutContent p{
-  color: white;
+  color: black;
   font-size: 1.25em;
   width: 65%;
 }
