--- a/css/about.css
+++ b/css/about.css
@@ -137,12 +137,13 @@
 
 #aboutContent{
   margin: 15px 15px 15px 20px;
+  padding: 0 1.5vw;
 }
 
 #aboutContent p{
   color: black;
   font-size: 1.25em;
-  width: 65%;
+  width: 60%;
 }
 
 @media (max-width: 810px) and (min-width: 475px){
