--- a/css/exp.css
+++ b/css/exp.css
@@ -31,14 +31,13 @@
 }
 
 .expContent{
-    margin-top: 1.35vh;
-    padding: 0 2vw;
+    /* padding: 0 5vw; */
     width:100%;
 }
 
 .expContent p {
   font-size: 1.5em;
-  color: white;
+  color: black;
   display: inline-block;
 }
 
@@ -71,11 +70,14 @@
     transform: translateX(100%);
     transition: transform 0.6s ease-in;
     margin-top: 45vh;
-    height:55vh;
+    display:flex;
+    padding: 2vh 0;
+    min-height: calc(59vh + 2.5em + 2.4rem);
 }
 
 .slideContainer-active {
     transform: translateX(0%);
+    /* height: 100vh; */
 }
 
 #arrow {
@@ -126,3 +128,28 @@
       opacity: 65%;
     }
   }
+
+.expContent h5{
+    margin-top: 4vh;
+      margin-bottom: .5em;
+      text-decoration: underline;
+      text-decoration-color:#ffb020;
+}
+
+#invisible{
+    color:white;
+    margin:0 0 0 0;
+}
+
+.courses{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 5vw;
+    grid-row-gap: 1vh;
+}
+
+.courses p {
+    font-size: 1em;
+    color: #8a8a8a;;
+    justify-content: flex-start;
+}
