--- a/css/about.css
+++ b/css/about.css
@@ -11,17 +11,18 @@
   overflow-x: scroll;
 }
 
-.title h2{
+.title h5{
   text-decoration: underline;
-  text-decoration-color: #ffb020;
-  /* color: white; */
+  text-decoration-color:#ffb020;
   color: black;
-  font-size: 3em;
-
 }
 
 .title #titlePeriod{
   color: #ffb020;
+}
+
+#profile{
+  width:100%;
 }
 
 .aboutBanner {
@@ -139,14 +140,13 @@
   }
 
 #aboutContent{
-  margin: 15px 15px 15px 20px;
-  padding: 0 1.5vw;
+  padding: 4vh 5vw;
 }
 
 #aboutContent p{
   color: black;
   font-size: 1.25em;
-  width: 60%;
+  /* width: 60%; */
 }
 
 @media (max-width: 810px) and (min-width: 475px){
